fix(Button, Input): [BSPK-168] Icon alignment and svg sizing within Buttons and the the clear icon sizing in Input

--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -94,13 +94,8 @@
         --field-clear-width: var(--spacing-sizing-06);
     }
 
-    [data-leading],
-    [data-trailing] {
-        position: relative;
-
-        svg {
-            width: var(--field-icon-width);
-        }
+    svg {
+        width: var(--field-icon-width);
     }
 
     label {
